syntax = "proto3";
package clusterpb;

option go_package = "../clusterpb";

message DictionaryItem {
  string route = 1;
  uint32 code = 2;
  string type = 3;
};

message MemberInfo {
  string label = 1;
  string serviceAddr = 2;
  string version = 3;
  repeated string services = 4;
  repeated DictionaryItem dictionary = 5;
}

message RegisterRequest {
  MemberInfo memberInfo = 1;
}

message RegisterResponse {
  repeated MemberInfo members = 1;
}

message UnregisterRequest {
  string serviceAddr = 1;
}

message UnregisterResponse {}

service Master {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Unregister(UnregisterRequest) returns (UnregisterResponse) {}
}

message NetAddr {
  string Network = 1;
  string Addr = 2;
}

message RequestMessage {
  string gateAddr = 1;
  uint64 sessionID = 2;
  uint32 shortVer = 3;
  uint64 ID = 4;
  int64 UID = 5;
  string route = 6;
  uint32 dataType = 7;
  bytes data = 8;
  NetAddr remoteAddr = 9;
  uint32 branch = 10;
}

message NotifyMessage {
  string gateAddr = 1;
  uint64 sessionID = 2;
  uint32 shortVer = 3;
  uint64 ID = 4;
  int64 UID = 5;
  string route = 6;
  uint32 dataType = 7;
  bytes data = 8;
  NetAddr remoteAddr = 9;
  uint32 branch = 10;
}

message ResponseMessage {
  uint64 sessionID = 1;
  uint32 shortVer = 2;
  uint64 ID = 3;
  string route = 4;
  uint32 dataType = 5;
  bytes data = 6;
}

message PushMessage {
  uint64 sessionID = 1;
  uint32 shortVer = 2;
  string route = 3;
  uint32 dataType = 4;
  bytes data = 5;
}

message MemberHandleResponse {}

message NewMemberRequest {
  MemberInfo memberInfo = 1;
}

message NewMemberResponse {}

message DelMemberRequest {
  string serviceAddr = 1;
}

message DelMemberResponse {}

message SessionClosedRequest {
  uint64 sessionID = 1;
}

message SessionClosedResponse {}

message CloseSessionRequest {
  uint64 sessionID = 1;
}

message CloseSessionResponse {}

message SessionCreatedRequest {
  string addr = 1;
  uint64 sessionID = 2;
}

message SessionCreatedResponse {
}


service Member {
  rpc HandleRequest(RequestMessage) returns (MemberHandleResponse) {}
  rpc HandleNotify(NotifyMessage) returns (MemberHandleResponse) {}
  rpc HandlePush(PushMessage) returns (MemberHandleResponse) {}
  rpc HandleResponse(ResponseMessage) returns (MemberHandleResponse) {}

  rpc NewMember(NewMemberRequest) returns (NewMemberResponse) {}
  rpc DelMember(DelMemberRequest) returns (DelMemberResponse) {}
  rpc SessionClosed(SessionClosedRequest) returns (SessionClosedResponse) {}
  rpc CloseSession(CloseSessionRequest) returns (CloseSessionResponse) {}
  rpc SessionCreated(SessionCreatedRequest) returns (SessionCreatedResponse) {}
}